# fastapi_demo

./: README.md  pyproject.toml
src/fastapi_demo/: __init__.py  asgi.py  main.py
src/fastapi_demo/api/v1/: demo.py
src/fastapi_demo/core/: __init__.py  celery_app.py
src/fastapi_demo/core/config/: __init__.py  config.py
src/fastapi_demo/items/: demo_items.py
src/fastapi_demo/router/: __init__.py
src/fastapi_demo/tasks/: task.py
